--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ hipsa_home/group_meeting/migrations/__pycache__/0002_auto_20200623_1326.cpython-
 hipsa_home/group_meeting/migrations/__pycache__/0003_auto_20200623_0552.cpython-36.pyc
 hipsa_home/group_meeting/migrations/__pycache__/0003_auto_20200624_0006.cpython-36.pyc
 hipsa_home/group_meeting/migrations/__pycache__/0004_auto_20200624_0010.cpython-36.pyc
+.vscode/settings.json
